added member status component

--- a/src/app/main/member-details/member-details.component.html
+++ b/src/app/main/member-details/member-details.component.html
@@ -8,5 +8,6 @@
     *ngIf="memberName !== ''"
     [username]="memberName"
     [inManagerView]="true"
+    [teamName]="teamName"
   ></app-status-list>
 </div>
