--- a/src/app/main/status-list/status-list.component.html
+++ b/src/app/main/status-list/status-list.component.html
@@ -126,6 +126,7 @@
       </div>
       <div class="col-md-3 d-flex flex-row-reverse">
         <input
+          *ngIf="!inManagerView"
           type="button"
           class="option-btn"
           name="btnAddMore"
