added add reamark

--- a/src/app/main/member-status/member-status.component.html
+++ b/src/app/main/member-status/member-status.component.html
@@ -1,1 +1,5 @@
-<app-status [username]="memberName"></app-status>
+<app-status
+  [username]="memberName"
+  [isManager]="true"
+  [teamName]="teamName"
+></app-status>
