--- a/src/app/main/status-list/status-list.component.html
+++ b/src/app/main/status-list/status-list.component.html
@@ -170,7 +170,15 @@
           </td>
           <td>
             <div class="py-2 mx-5">
-              <span class="font-weight-bold">Submitted</span>
+              <ng-template #Submitted>
+                <span class="font-weight-bold">Submitted</span>
+              </ng-template>
+
+              <span
+                *ngIf="status.status_read; else Submitted"
+                class="font-weight-bold"
+                >Seen</span
+              >
             </div>
           </td>
           <td>
