added breadcrumb functionality

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -14,7 +14,7 @@
     <!-- visible true if manager to show navbar navigation -->
     <app-navbar [visible]="navbarVisible"></app-navbar>
     <!-- pass breadcrumb path as crumbs i.e array of title and route -->
-    <app-breadcrumb [crumbs]="breadcrumb"></app-breadcrumb>
+    <app-breadcrumb></app-breadcrumb>
     <router-outlet></router-outlet>
   </div>
 </div>
