--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -8,52 +8,10 @@
         >
           <div class="card-img-left d-none d-md-flex"></div>
           <div class="card-body">
-            <img
-              class="logo"
-              src="https://www.watchguard.com/sites/default/files/logo.png"
-              alt="WatchGuard"
-            />
-
-            <h4 class="card-subtitle mb-5 fw-light fs-4">
-              Sign into your account
-            </h4>
-            <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
-              <div class="form-floating mb-3">
-                <input
-                  type="text"
-                  class="form-control"
-                  formControlName="username"
-                  id="floatingInputUsername"
-                  placeholder="myusername"
-                />
-                <label for="floatingInputUsername ">Username</label>
-              </div>
-
-              <div class="form-floating mb-3">
-                <input
-                  type="password"
-                  class="form-control"
-                  formControlName="password"
-                  id="floatingPassword"
-                  placeholder="Password"
-                />
-                <label for="floatingPassword">Password</label>
-              </div>
-
-              <div class="d-grid mb-2">
-                <button
-                  class="btn btn-login fw-bold text-uppercase"
-                  type="submit"
-                >
-                  Sign In
-                </button>
-                <a href="#!" class="forgot-password-link">Forgot password?</a>
-              </div>
-            </form>
+            <router-outlet></router-outlet>
           </div>
         </div>
       </div>
     </div>
-    <app-alert *ngIf="showAlert" [errorMessage]="errorMessage"></app-alert>
   </div>
 </div>
