--- a/src/app/auth/change-password/change-password.component.css
+++ b/src/app/auth/change-password/change-password.component.css
@@ -42,13 +42,14 @@ label {
   background-color: transparent;
   color: #ef4223;
 }
-.forgot-password-link {
+.a-link {
   font-size: 14px;
   color: #919aa3;
   margin-bottom: 12px;
   text-decoration: none;
 }
-.forgot-password-link:hover {
+.a-link:hover {
+  cursor: pointer;
   text-decoration: underline;
   color: #ef4223;
 }
