--- a/src/app/auth/change-password/change-password.component.html
+++ b/src/app/auth/change-password/change-password.component.html
@@ -3,39 +3,71 @@
   src="https://www.watchguard.com/sites/default/files/logo.png"
   alt="WatchGuard"
 />
+<div *ngIf="!otpSent; else ChangePassword">
+  <h4 class="card-subtitle mb-5 fw-light fs-4">Request OTP</h4>
+  <form [formGroup]="requestOtpForm" (ngSubmit)="onRequestOTP()">
+    <div class="form-floating mb-3">
+      <input
+        type="text"
+        class="form-control"
+        formControlName="username"
+        id="floatingInputUsername"
+        placeholder="myusername"
+      />
+      <label for="floatingInputUsername ">Username</label>
+    </div>
+    <div class="d-grid mb-2">
+      <button class="btn btn-login fw-bold text-uppercase" type="submit">
+        Send OTP
+      </button>
+      <a
+        [routerLink]="['/login']"
+        routerLinkActive="router-link-active"
+        class="a-link"
+        >Go to Login.</a
+      >
+    </div>
+  </form>
+</div>
+<ng-template #ChangePassword>
+  <h4 class="card-subtitle mb-5 fw-light fs-4">Change Password</h4>
+  <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
+    <div class="form-floating mb-3">
+      <input
+        type="text"
+        class="form-control"
+        formControlName="otp"
+        id="floatingInputOTP"
+        placeholder="otp"
+      />
+      <label for="floatingInputOTP ">OTP</label>
+    </div>
+    <div class="form-floating mb-3">
+      <input
+        type="password"
+        class="form-control"
+        id="floatingPassword"
+        formControlName="password"
+        placeholder="Password"
+      />
+      <label for="floatingPassword">Password</label>
+    </div>
+    <div class="form-floating mb-3">
+      <input
+        type="password"
+        class="form-control"
+        id="floatingConfirmPassword"
+        formControlName="confirmPassword"
+        placeholder="Confirm Password"
+      />
+      <label for="floatingPassword">Confirm Password</label>
+    </div>
+    <div class="d-grid mb-2">
+      <button class="btn btn-login fw-bold text-uppercase" type="submit">
+        Change Password
+      </button>
+    </div>
+  </form>
+</ng-template>
 
-<h4 class="card-subtitle mb-5 fw-light fs-4">Change Password</h4>
-<form>
-  <div class="form-floating mb-3">
-    <input
-      type="text"
-      class="form-control"
-      id="floatingInputUsername"
-      placeholder="myusername"
-    />
-    <label for="floatingInputUsername ">Username</label>
-  </div>
-
-  <div class="form-floating mb-3">
-    <input
-      type="password"
-      class="form-control"
-      id="floatingPassword"
-      placeholder="Password"
-    />
-    <label for="floatingPassword">Password</label>
-  </div>
-
-  <div class="d-grid mb-2">
-    <button class="btn btn-login fw-bold text-uppercase" type="submit">
-      Sign In
-    </button>
-    <a
-      [routerLink]="['/login', 'change-password']"
-      routerLinkActive="router-link-active"
-      class="forgot-password-link"
-      >Change password.</a
-    >
-  </div>
-</form>
 <!-- <app-alert *ngIf="showAlert" [errorMessage]="errorMessage"></app-alert> -->
