--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -35,7 +35,7 @@
     <a
       [routerLink]="['/login', 'change-password']"
       routerLinkActive="router-link-active"
-      class="forgot-password-link"
+      class="a-link"
       >Change password.</a
     >
   </div>
