--- a/src/app/main/status/status.component.html
+++ b/src/app/main/status/status.component.html
@@ -1,6 +1,23 @@
 <div class="m-5">
   <div class="container-fluid mt-4 shadow p-4 rounded">
     <div class="row justify-content-center">
+      <div class="col-lg-11 col-md-11 d-flex flex-row-reverse">
+        <input
+          type="button"
+          class="arrow-btn"
+          name="filterStatusListDefault"
+          value="&rarr;"
+          (click)="navigateStatus('next')"
+        />
+        <input
+          type="button"
+          class="arrow-btn"
+          name="filterStatusListDefault"
+          value="&larr;"
+          (click)="navigateStatus('prev')"
+        />
+      </div>
+
       <div class="col-lg-11 col-md-11">
         <div class="row justify-content-center">
           <div class="col-9">
