added show password feature

--- a/src/app/auth/change-password/change-password.component.html
+++ b/src/app/auth/change-password/change-password.component.html
@@ -24,7 +24,7 @@
         [routerLink]="['/login']"
         routerLinkActive="router-link-active"
         class="a-link"
-        >Go to Login.</a
+        >Go to Login</a
       >
     </div>
   </form>
