--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,7 +6,7 @@
 
 <h4 class="card-subtitle mb-5 fw-light fs-4">Sign into your account</h4>
 <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
-  <div class="form-floating mb-3">
+  <div class="form-floating">
     <input
       type="text"
       class="form-control"
@@ -17,15 +17,27 @@
     <label for="floatingInputUsername ">Username</label>
   </div>
 
-  <div class="form-floating mb-3">
+  <div class="form-floating">
     <input
       type="password"
       class="form-control"
       formControlName="password"
-      id="floatingPassword"
+      id="loginPassword"
       placeholder="Password"
     />
-    <label for="floatingPassword">Password</label>
+    <label for="loginPassword">Password</label>
+  </div>
+  <div class="mb-4">
+    <input
+      formControlName="passwordVisible"
+      class="form-check-input"
+      type="checkbox"
+      (click)="togglePassword()"
+      id="showPassword"
+    />
+    <label class="form-check-label mx-2" for="showPassword">
+      Show Password
+    </label>
   </div>
 
   <div class="d-grid mb-2">
@@ -36,7 +48,7 @@
       [routerLink]="['/login', 'change-password']"
       routerLinkActive="router-link-active"
       class="a-link"
-      >Change password.</a
+      >Change password</a
     >
   </div>
 </form>
