--- a/src/app/main/status-list/status-list.component.css
+++ b/src/app/main/status-list/status-list.component.css
@@ -149,7 +149,10 @@ thead tr:nth-child(3) th {
   font-size: 14px;
   opacity: 0.8;
 }
-
+input:-webkit-autofill {
+  -webkit-background-clip: text;
+  background-clip: text;
+}
 .prev:hover,
 .next:hover,
 .datepicker-switch:hover {
