--- a/src/app/main/status-list/status-list.component.css
+++ b/src/app/main/status-list/status-list.component.css
@@ -12,6 +12,7 @@
   width: 60%;
   margin-left: 25px;
   max-width: 120px;
+  min-width: 130px;
   max-height: 35px;
   padding: 5px;
   font-weight: 600;
@@ -80,6 +81,11 @@ button:focus {
 .px-5 {
   padding-right: 0 !important;
 }
+.datepicker-container {
+  position: absolute;
+  top: 4%;
+  left: 45%;
+}
 .datepicker {
   background-color: #fff;
   border: none;
@@ -137,7 +143,7 @@ thead tr:nth-child(3) th {
 .range-start,
 .range-end {
   border-radius: 50% !important;
-  background-image: linear-gradient(#ffa726, #ffa726) !important;
+  background-image: linear-gradient(#7ec0f7, #49a8f7) !important;
 }
 
 .prev,
@@ -188,7 +194,7 @@ input:-webkit-autofill {
   color: black;
 }
 .form-group {
-  margin: 10px 0;
+  margin: 10px;
 }
 .form-group.hidden {
   width: 0;
@@ -199,23 +205,22 @@ input:-webkit-autofill {
 .date-range-label {
   min-width: 20%;
 }
-.date-input {
-  margin-bottom: 14px;
-}
+
 .date-input {
   display: none;
   /* border-radius: 1.5rem; */
 }
 .input-group-append {
   width: 100%;
+  padding: 10px;
 }
 .custom-date-input-group {
+  position: absolute;
+  left: 58%;
   min-width: 400px;
-  position: fixed;
-  transform: translate(37vw, -18vh);
 }
 .filter-btn {
-  transform: translateX(320%);
+  transform: translateX(210%);
 }
 .date-btn {
   /* min-width: 150px; */
