--- a/src/app/main/add-status/add-status.component.html
+++ b/src/app/main/add-status/add-status.component.html
@@ -34,7 +34,7 @@
             </div>
             <div>
               <label for="floatingInputFirstName " class="h4"
-                >Accomplishments Done :</label
+                >Task Done :</label
               >
               <div class="NgxEditor__Wrapper">
                 <ngx-editor-menu [editor]="editor1" [toolbar]="toolbar">
