--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-  <button class="btn" id="menu-toggle">&equiv;</button>
+  <button class="btn" id="menu-toggle">
+    <i class="fa fa-bars"></i>
+  </button>
   <button
     class="navbar-toggler"
     type="button"
