--- a/src/app/main/status-list/status-list.component.css
+++ b/src/app/main/status-list/status-list.component.css
@@ -5,7 +5,6 @@
   margin-right: auto;
   background-color: rgb(252, 252, 252);
 }
-
 .option-btn {
   border: none;
   border-radius: 1.5rem;
@@ -33,6 +32,7 @@
 .search-btn {
   margin-left: 10px !important;
   max-width: 50px !important;
+  padding: 5px 15px !important;
 }
 .date-input {
   padding: 10px 15px !important;
@@ -80,21 +80,17 @@ button:focus {
 .px-5 {
   padding-right: 0 !important;
 }
-.datepicker-container {
-  position: absolute;
-  top: 4%;
-  left: 45%;
-}
+
 .datepicker {
   background-color: #fff;
   border: none;
   border-radius: 0 !important;
 }
 
-.datepicker-dropdown {
+/* .datepicker-dropdown {
   top: 0;
   left: 0;
-}
+} */
 
 .datepicker table tr td.today,
 span.focused {
@@ -209,6 +205,7 @@ input:-webkit-autofill {
   display: none;
   /* border-radius: 1.5rem; */
 }
+
 .input-group-append {
   width: 100%;
   padding: 10px;
