--- a/src/app/main/status-list/status-list.component.html
+++ b/src/app/main/status-list/status-list.component.html
@@ -11,20 +11,11 @@
             placeholder="Search..."
           />
           <button type="submit" class="option-btn search-btn">
-            <div
-              style="
-                -webkit-transform: rotate(45deg);
-                -moz-transform: rotate(45deg);
-                -o-transform: rotate(45deg);
-                transform: rotate(-45deg);
-              "
-            >
-              &#9906;
-            </div>
+            <i class="fa fa-search"></i>
           </button>
         </form>
       </div>
-      <div class="col-md-9 d-flex flex-row">
+      <div class="options-container col-md-9 d-flex flex-row">
         <input
           type="button"
           class="option-btn mx-0"
@@ -73,7 +64,7 @@
           <button class="option-btn" id="dropdownForm1" ngbDropdownToggle>
             Custom
           </button>
-          <div ngbDropdownMenu aria-labelledby="dropdownForm1">
+          <div ngbDropdownMenu aria-labelledby="dropdownForm1 ">
             <form class="form-inline">
               <div class="form-group hidden">
                 <div class="input-group date-input-group d-flex">
