--- a/src/app/main/add-status/add-status.component.css
+++ b/src/app/main/add-status/add-status.component.css
@@ -83,9 +83,10 @@ g-invalid.ng-touched {
   margin-left: 57vw;
 }
 .add-btn {
-  transform: translate(650%, 45%);
-  padding: 0px 7px 4px 7px !important;
-  border-radius: 50% !important;
+  float: right;
+  /* transform: translate(650%, 45%); */
+  padding: 10px 17px 9px !important;
+  border-radius: 4px !important;
 }
 .btn {
   margin-left: 20px;
