--- a/src/app/main/add-user/add-user.component.html
+++ b/src/app/main/add-user/add-user.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="inviteUserForm" (ngSubmit)="onSubmit()" class="form-card">
   <div class="row justify-content-center">
-    <div class="col-6">
+    <div class="col-sm-12 col-md-6">
       <div class="form-floating mb-3">
         <input
           type="text"
@@ -37,7 +37,7 @@
         </select>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-sm-12 col-md-6">
       <div class="form-floating mb-3">
         <input
           type="email"
