--- a/src/app/main/status-list/status-list.component.html
+++ b/src/app/main/status-list/status-list.component.html
@@ -15,7 +15,7 @@
           </button>
         </form>
       </div>
-      <div class="options-container col-md-9 d-flex flex-row">
+      <div class="options-container col-md-9 mt-2 d-flex flex-row">
         <input
           type="button"
           class="option-btn mx-0"
@@ -44,21 +44,7 @@
           value="Custom"
           (click)="collapse.toggle()"
         /> -->
-        <div class="datepicker-container">
-          <input
-            name="datepicker"
-            class="form-control date-input"
-            ngbDatepicker
-            #datepicker="ngbDatepicker"
-            [autoClose]="'outside'"
-            (dateSelect)="onDateSelection($event)"
-            [displayMonths]="2"
-            [dayTemplate]="t"
-            outsideDays="hidden"
-            [startDate]="fromDate!"
-            tabindex="-1"
-          />
-        </div>
+        <div class="datepicker-container"></div>
 
         <div
           ngbDropdown
@@ -82,6 +68,19 @@
                     >
                       Select Date
                     </button>
+                    <input
+                      name="datepicker"
+                      class="form-control date-input"
+                      ngbDatepicker
+                      #datepicker="ngbDatepicker"
+                      [autoClose]="'outside'"
+                      (dateSelect)="onDateSelection($event)"
+                      [displayMonths]="2"
+                      [dayTemplate]="t"
+                      outsideDays="hidden"
+                      [startDate]="fromDate!"
+                      tabindex="-1"
+                    />
                     <button
                       type="button"
                       class="btn date-btn btn-outline-secondary filter-btn"
@@ -113,6 +112,7 @@
 
                   <input
                     #dpFromDate
+                    type="date"
                     class="form-control"
                     placeholder="yyyy-mm-dd"
                     name="dpFromDate"
@@ -129,6 +129,7 @@
                   <input
                     #dpToDate
                     class="form-control"
+                    type="date"
                     placeholder="yyyy-mm-dd"
                     name="dpToDate"
                     [value]="formatter.format(toDate)"
@@ -153,7 +154,7 @@
           </div>
         </div>
       </div> -->
-      <div class="col-md-3 d-flex flex-row-reverse">
+      <div class="col-md-3 mt-2 d-flex flex-row-reverse">
         <input
           *ngIf="!inManagerView"
           type="button"
