added change password component

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,6 +3,7 @@
     <div class="sidebar-heading">
       <img
         class="logo"
+        [routerLink]="['/user']"
         src="https://www.cybintsolutions.com/wp-content/uploads/2021/04/WatchGuard-Logo-1.png"
         alt="WatchGuard"
       />
