linked update password to API

--- a/src/app/main/update-password/update-password.component.html
+++ b/src/app/main/update-password/update-password.component.html
@@ -7,17 +7,22 @@
             <h2 class="heading text-center">Change Password</h2>
           </div>
         </div>
-        <form class="form-card">
+        <form
+          class="form-card"
+          [formGroup]="changePasswordForm"
+          (ngSubmit)="onSubmit()"
+        >
           <div class="row justify-content-center">
             <div class="col-12">
               <div class="form-floating mb-3">
                 <input
                   type="password"
                   class="form-control"
-                  id="floatingInputPhone"
+                  id="oldPassword"
+                  formControlName="oldPassword"
                   placeholder="Phone"
                 />
-                <label for="floatingInputPhone ">Old Password</label>
+                <label for="oldPassword ">Old Password</label>
               </div>
             </div>
 
@@ -26,10 +31,11 @@
                 <input
                   type="password"
                   class="form-control"
-                  id="floatingInputAddress"
+                  id="newPassword"
+                  formControlName="newPassword"
                   placeholder="address"
                 />
-                <label for="floatingInputAddress ">New Password</label>
+                <label for="newPassword ">New Password</label>
               </div>
             </div>
             <div class="col-12">
@@ -37,10 +43,11 @@
                 <input
                   type="password"
                   class="form-control"
-                  id="floatingInputPhone"
+                  id="confirmPassword"
+                  formControlName="confirmPassword"
                   placeholder="Phone"
                 />
-                <label for="floatingInputPhone ">Confirm New Password</label>
+                <label for="confirmPassword ">Confirm New Password</label>
               </div>
             </div>
           </div>
@@ -62,5 +69,5 @@
       </div>
     </div>
   </div>
-  <!-- <app-alert *ngIf="showAlert" [errorMessage]="alertMessage"></app-alert> -->
+  <app-alert *ngIf="showAlert" [errorMessage]="alertMessage"></app-alert>
 </div>
