--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -37,7 +37,7 @@
   </div>
   <div ngbDropdown #navDrop="ngbDropdown" class="d-inline-block">
     <button
-      class="btn btn-options fw-bold"
+      class="btn btn-options fw-bold mx-4"
       id="dropdownBasic1"
       ngbDropdownToggle
     >
