added error alerts

--- a/src/app/auth/change-password/change-password.component.html
+++ b/src/app/auth/change-password/change-password.component.html
@@ -70,4 +70,4 @@
   </form>
 </ng-template>
 
-<!-- <app-alert *ngIf="showAlert" [errorMessage]="errorMessage"></app-alert> -->
+<app-alert *ngIf="showAlert" [errorMessage]="errorMessage"></app-alert>
