--- a/src/app/main/add-team/add-team.component.html
+++ b/src/app/main/add-team/add-team.component.html
@@ -121,5 +121,5 @@
       </form>
     </div>
   </div>
-  <!-- <app-alert [errorMessage]="alertMessage" *ngIf="showAlert"></app-alert> -->
+  <app-alert [errorMessage]="alertMessage" *ngIf="showAlert"></app-alert>
 </div>
