--- a/src/app/main/member-details/member-details.component.html
+++ b/src/app/main/member-details/member-details.component.html
@@ -40,4 +40,6 @@
     *ngIf="memberName !== 'none'"
     [inManagerView]="true"
   ></app-status-list>
+
+  <app-alert *ngIf="showAlert" [errorMessage]="alertMessage"></app-alert>
 </div>
