--- a/src/app/main/member-list/member-list.component.html
+++ b/src/app/main/member-list/member-list.component.html
@@ -116,5 +116,5 @@
     </ng-template>
   </div>
 
-  <!-- <app-alert [errorMessage]="alertMessage" *ngIf="showAlert"></app-alert> -->
+  <app-alert [errorMessage]="alertMessage" *ngIf="showAlert"></app-alert>
 </div>
