--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -48,7 +48,7 @@
       [routerLink]="['/login', 'change-password']"
       routerLinkActive="router-link-active"
       class="a-link"
-      >Change password</a
+      >Forgot password?</a
     >
   </div>
 </form>
