--- a/src/app/main/edit-profile/edit-profile.component.html
+++ b/src/app/main/edit-profile/edit-profile.component.html
@@ -70,15 +70,18 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-12">
+              <label for="floatingInputAddress ">Address</label>
+
               <div class="form-floating mb-3">
-                <input
+                <textarea
                   type="text"
                   class="form-control"
                   formControlName="address"
                   id="floatingInputAddress"
                   placeholder="address"
-                />
-                <label for="floatingInputAddress ">Address</label>
+                  cols="30"
+                  rows="10"
+                ></textarea>
               </div>
             </div>
           </div>
