--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -40,7 +40,7 @@
             </div>
             <div class="row">
               <div class="col-md-6">
-                <label>Manager</label>
+                <label>Reports to</label>
               </div>
               <div class="col-md-6">
                 <p>{{ profileData.manager }}</p>
