--- a/src/app/main/add-status/add-status.component.html
+++ b/src/app/main/add-status/add-status.component.html
@@ -4,7 +4,7 @@
       <div class="row justify-content-center">
         <div class="col-9">
           <h2 class="heading h2">Add Status</h2>
-          <h3 class="heading h6 fw-normal">{{ timeStamp }}</h3>
+          <!-- <h3 class="heading h6 fw-normal">{{ timeStamp }}</h3> -->
         </div>
         <div class="col-3">
           <p class="heading mt-5">ID : {{ statusID }}</p>
@@ -17,9 +17,9 @@
         class="form-card mt-4"
       >
         <div class="row d-flex">
-          <div class="col-8">
+          <div class="col-12">
             <div class="row">
-              <div class="col-8">
+              <div class="col-5">
                 <div class="form-floating">
                   <input
                     type="text"
