--- a/src/app/main/status/status.component.html
+++ b/src/app/main/status/status.component.html
@@ -46,7 +46,7 @@
 
         <div class="row d-flex">
           <div class="col-7">
-            <h4 class="mb-3">Accomplishments Done :</h4>
+            <h4 class="mb-3">Task Done :</h4>
             <div id="taskDone"></div>
           </div>
           <div class="col-5">
