default filter to reset

--- a/src/app/main/status-list/status-list.component.css
+++ b/src/app/main/status-list/status-list.component.css
@@ -9,7 +9,7 @@
   border: none;
   border-radius: 1.5rem;
   width: fit-content;
-  margin-left: 25px;
+  margin-right: 25px;
   max-width: 120px;
   max-height: 35px;
   padding: 5px 20px;
