--- a/src/app/main/status/status.component.html
+++ b/src/app/main/status/status.component.html
@@ -13,6 +13,7 @@
       </div>
       <div class="col-lg-10 col-md-10 d-flex flex-row-reverse">
         <button
+          [disabled]="nextStatusID === ''"
           type="button"
           class="arrow-btn"
           name="filterStatusListDefault"
@@ -22,6 +23,7 @@
           <i class="fa fa-arrow-right"></i>
         </button>
         <button
+          [disabled]="prevStatusID === ''"
           type="button"
           class="arrow-btn"
           name="filterStatusListDefault"
