back to the top added

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -17,5 +17,6 @@
     <!-- pass breadcrumb path as crumbs i.e array of title and route -->
     <app-breadcrumb></app-breadcrumb>
     <router-outlet></router-outlet>
+    <app-back-to-top></app-back-to-top>
   </div>
 </div>
