--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -21,7 +21,7 @@
           [routerLink]="['/user']"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
-          >User View
+          >My View
         </a>
       </li>
       <li class="nav-item">
