add status form removed required for risk anf plans

--- a/src/app/main/add-status/add-status.component.html
+++ b/src/app/main/add-status/add-status.component.html
@@ -23,7 +23,7 @@
                 <div class="form-floating">
                   <input
                     type="text"
-                    class="form-control"
+                    class="form-control pt-2"
                     formControlName="title"
                     id="floatingInputTitle"
                     placeholder="Title"
