--- a/src/app/main/breadcrumb/breadcrumb.component.html
+++ b/src/app/main/breadcrumb/breadcrumb.component.html
@@ -4,6 +4,6 @@
     [routerLink]="crumb.route"
     routerLinkActive="router-link-active"
     class="btn"
-    >{{ crumb.title }}</a
+    >{{ crumb.title | titlecase }}</a
   >
 </div>
