--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex" id="wrapper">
+<div #wrapper class="d-flex" id="wrapper">
   <div id="sidebar-wrapper">
     <div class="sidebar-heading">
       <img
