made data input in status compunent generic

--- a/src/app/main/status-list/status-list.component.html
+++ b/src/app/main/status-list/status-list.component.html
@@ -176,10 +176,14 @@
         />
       </div>
     </div>
-
     <app-table
       [columns]="tableColumns"
+      [data]="statusData"
       [statusList]="currentStatusList"
+      [inManagerView]="inManagerView"
+      [highlightRowList]="highlightRowList"
+      [username]="username"
+      [teamName]="teamName"
     ></app-table>
     <div class="row footer mb-5 mt-4">
       <div class="col-md-6">
